repair bug for navbar media 768px underlay menudetail fixed overlay z-index 2

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -58,7 +58,9 @@ footer {
 .footer-right input[type="email"] {
   padding: 10px;
   margin: 5px;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
+  border-radius: 6px;
+  border: none;
   /* border: none;
     border-radius: 5px;
     margin-right: 10px; */
@@ -98,15 +100,16 @@ footer {
   /* margin-right: 10px; */
   font-size: 24px;
   display: contents;
-
-  /* display: inline-block;
-    margin-right: 10px;
-    font-size: 24px;
-    color: #007bff; */
+ 
 }
 
 .social-icons a:last-child {
   margin-right: 0;
+}
+
+.bxl-instagram, .bxl-twitter, .bxl-whatsapp {
+  font-size: 30px;
+  padding-right: 5px;
 }
 
 .copyright {
