--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,6 +24,7 @@ button {
   justify-content: space-between;
   display: flex;
   padding: 20px 10%;
+  z-index: 2;
 }
 
 .logo a {
@@ -53,14 +54,14 @@ button {
 @media screen and (max-width: 768px) {
   .navbar-nav {
     display: none;
-    
+
     flex-direction: column;
     position: absolute;
-    top: 60px;
-    left: 22%;
+    top: 80%;
+    left: 15%;
     border: 2px solid rgba(255, 255, 255, 0.2);
     /* width: 85%; */
-    width: 420px;
+    width: 500px;
     /* background: #081b29; */
     /* background: transparent; */
     /* padding: 10px; */
@@ -68,7 +69,8 @@ button {
     align-items: center;
     backdrop-filter: blur(20px);
     border-radius: 10px;
-  padding: 5px;
+    padding: 5px;
+    
   }
 
   .navbar-nav.active {
