--- a/src/pages/UserDetail.css
+++ b/src/pages/UserDetail.css
@@ -8,6 +8,7 @@
   background-size: cover;
   background-position: center;
   padding: 20px 10%;
+  z-index: 1;
 }
 
 .user-detail-title {
@@ -23,6 +24,7 @@
   padding: 30px 40px;
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 .user-detail-card {
